manifests/docutest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docutest
  namespace: docutest
  labels:
    app: docutest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docutest
  template:
    metadata:
      labels:
        app: docutest
    spec:
      containers:
      - name: docutest
        image: eilonwy/docutest:latest
        ports:
        - containerPort: 8083
        imagePullPolicy: Always
