manifests/docutest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docutest
  namespace: docutest
  labels:
    app: docutest
spec:
  selector:
    app: docutest
  ports:
  - name: http
    protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
